[gd_scene load_steps=4 format=3 uid="uid://4tj0qise1som"]

[ext_resource type="Script" uid="uid://bbpraosrh82tp" path="res://scenes/ui/main_menu.gd" id="1_bck1p"]
[ext_resource type="Resource" uid="uid://bd874b0h1q8n1" path="res://scenes/run/run_startup.tres" id="2_4poyw"]
[ext_resource type="Texture2D" uid="uid://bhhk3w6pjsu6w" path="res://art/场景/主界面.png" id="3_q85j6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_bck1p")
run_startup = ExtResource("2_4poyw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99421, 1)
texture = ExtResource("3_q85j6")

[node name="Title" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = -504.0
offset_right = 437.0
offset_bottom = -304.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "双镜臆想"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="Title"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 201.0
offset_right = 199.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-1, -1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
text = "双镜臆想"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 622.0
offset_top = -183.0
offset_right = 880.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="NewRun" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
offset_left = 288.0
offset_top = 285.0
offset_right = 546.0
offset_bottom = 353.0
rotation = -0.543922
scale = Vector2(2.2212, 3.21745)
mouse_filter = 1
theme_override_font_sizes/font_size = 50

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 571.0
offset_top = 543.0
offset_right = 829.0
offset_bottom = 611.0
rotation = -0.303245
scale = Vector2(1.11218, 1.11218)
theme_override_font_sizes/font_size = 50
text = "设置"

[node name="Exit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
offset_left = 703.0
offset_top = 606.0
offset_right = 956.0
offset_bottom = 675.0
rotation = -0.208797
scale = Vector2(2.35645, 2.35645)
theme_override_font_sizes/font_size = 50
text = "退出"

[node name="Continue" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
offset_left = 605.0
offset_top = 388.0
offset_right = 863.0
offset_bottom = 456.0
rotation = -0.401788
scale = Vector2(1.53957, 1.87274)
theme_override_font_sizes/font_size = 50
text = "继续"

[connection signal="pressed" from="NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
